--- a/2017-12-04/Workshop_07.ipynb
+++ b/2017-12-04/Workshop_07.ipynb
@@ -89,11 +89,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "%-------------------------------------------------------------%\n",
     "%---Mappa cilindrica------------------------------------------%\n",
     "%-------------------------------------------------------------%\n",
     "\n",
-    "DEF cylMap = MAP:[S2 * sin ~ S1, S2 * cos ~ S1, S3];"
+    "DEF cylMap = MAP:[S2 * sin ~ S1, S2 * cos ~ S1, S3];```"
    ]
   },
   {
@@ -120,6 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "%-------------------------------------------------------------%\n",
     "%---Scala esterna---------------------------------------------%\n",
     "%-------------------------------------------------------------%\n",
@@ -133,7 +135,7 @@
     "DEF hbasament = hstep*nsteps;\n",
     "DEF stair = (MKPOL ~ UKPOL):(steps:<wstep,hstep>:nsteps RIGHT (S:2:-1 ~ @2 ~ CUBOID):<PI/24,wsteps,hbasament>);\n",
     "DEF ramp  = cylMap:(T:2:r4:stair);\n",
-    "DEF stairs = (STRUCT ~ ##:12):<ramp, R:<1,2>:(PI/6)>;\n"
+    "DEF stairs = (STRUCT ~ ##:12):<ramp, R:<1,2>:(PI/6)>;```\n"
    ]
   },
   {
@@ -207,6 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "%-------------------------------------------------------------%\n",
     "%---Basamento-------------------------------------------------%\n",
     "%-------------------------------------------------------------%\n",
@@ -214,7 +217,7 @@
     "DEF basisSector = (cylMap ~ EMBED:1):\n",
     "    (Intervals:(2*PI/12):4 * Intervals:(r4 - (wstep*(nsteps - 1))):1);\n",
     "DEF basis = (STRUCT ~ ##:12):<basisSector, R:<1,2>:(2*PI/12)>;\n",
-    "DEF basement = (R:<1,2>:(PI/-48) ~ STRUCT):< stairs, T:3:(hstep*nsteps), basis >;"
+    "DEF basement = (R:<1,2>:(PI/-48) ~ STRUCT):< stairs, T:3:(hstep*nsteps), basis >;```"
    ]
   },
   {
@@ -277,6 +280,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "%-------------------------------------------------------------%\n",
     "%---Muro esterno----------------------------------------------%\n",
     "%-------------------------------------------------------------%\n",
@@ -298,7 +302,7 @@
     "\n",
     "%\n",
     "STRUCT:<basement, T:3:hbasament, FullExtWall>;\n",
-    "%"
+    "%```"
    ]
   },
   {
@@ -393,6 +397,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "%-------------------------------------------------------------%\n",
     "%---Colonne intermedie----------------------------------------%\n",
     "%-------------------------------------------------------------%\n",
@@ -424,7 +429,7 @@
     "\n",
     "%\n",
     "STRUCT:<basement, T:3:hbasament, FullExtWall, TheMedColumns >;\n",
-    "%"
+    "%```"
    ]
   },
   {
@@ -534,6 +539,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "%-------------------------------------------------------------%\n",
     "%---Archi sulle colonne---------------------------------------%\n",
     "%-------------------------------------------------------------%\n",
@@ -569,7 +575,7 @@
     "\n",
     "%\n",
     "STRUCT:<basement, T:3:hbasament, FullExtWall, TheArcsCols >;\n",
-    "%"
+    "%```"
    ]
   },
   {
@@ -689,6 +695,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "%-------------------------------------------------------------%\n",
     "%---Muro intermedio superiore---------------------------------%\n",
     "%-------------------------------------------------------------%\n",
@@ -708,7 +715,7 @@
     "\n",
     "%\n",
     "STRUCT:<basement, T:3:hbasament, FullExtWall, MedWallArcs >;\n",
-    "%"
+    "%```"
    ]
   },
   {
@@ -799,6 +806,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "%-------------------------------------------------------------%\n",
     "%---Muri laterali della croce---------------------------------%\n",
     "%-------------------------------------------------------------%\n",
@@ -812,7 +820,7 @@
     "\n",
     "%\n",
     "STRUCT:<basement, T:3:hbasament, FullExtWall, MedWallArcs, CrossWalls >;\n",
-    "%"
+    "%```"
    ]
   },
   {
@@ -897,6 +905,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "%-------------------------------------------------------------%\n",
     "%---Tetto sulla croce-----------------------------------------%\n",
     "%-------------------------------------------------------------%\n",
@@ -909,7 +918,7 @@
     "%\n",
     "STRUCT:<basement, T:3:hbasament, FullExtWall, MedWallArcs, \n",
     "        CrossWalls, FullTetto >;\n",
-    "%"
+    "%```"
    ]
   },
   {
@@ -994,6 +1003,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "%-------------------------------------------------------------%\n",
     "%---Muro con Triplice apertura--------------------------------%\n",
     "%-------------------------------------------------------------%\n",
@@ -1011,7 +1021,7 @@
     "END;\n",
     "%\n",
     "CourtWall:<6,6>:<3,3>\n",
-    "%"
+    "%```"
    ]
   },
   {
@@ -1041,6 +1051,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "%-------------------------------------------------------------%\n",
     "%---Muro inferiore Cortile interno----------------------------%\n",
     "%-------------------------------------------------------------%\n",
@@ -1055,7 +1066,7 @@
     "STRUCT:<FullTetto, CrossWalls, CrossCourtWall >;\n",
     "STRUCT:<basement, T:3:hbasament, FullExtWall, FullTetto, CrossCourtWall,\n",
     "        CrossWalls, MedWallArcs, TheMedColumns>;\n",
-    "%"
+    "%```"
    ]
   },
   {
@@ -1142,6 +1153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "%-------------------------------------------------------------%\n",
     "%---Coronamento Muro Cortile interno--------------------------%\n",
     "%-------------------------------------------------------------%\n",
@@ -1158,7 +1170,7 @@
     "\n",
     "STRUCT:<basement, T:3:hbasament, FullExtWall, FullTetto, CrossCourtWall,\n",
     "        CrossWalls, MedWallArcs, TheMedColumns, FullTopCourtWall>;\n",
-    "%"
+    "%```"
    ]
   },
   {
@@ -1245,6 +1257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "%-------------------------------------------------------------%\n",
     "%---Tetto su Cortile interno----------------------------------%\n",
     "%-------------------------------------------------------------%\n",
@@ -1266,7 +1279,7 @@
     "        FullCourTetto >;\n",
     "STRUCT:<basement, T:3:hbasament, FullExtWall, FullTetto, CrossCourtWall,\n",
     "        CrossWalls, MedWallArcs, TheMedColumns, FullTopCourtWall, FullCourTetto>;\n",
-    "%"
+    "%```"
    ]
   },
   {
@@ -1355,6 +1368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "%-------------------------------------------------------------%\n",
     "%---Colonne muro interno--------------------------------------%\n",
     "%-------------------------------------------------------------%\n",
@@ -1368,7 +1382,7 @@
     "END;\n",
     "\n",
     "DEF InternalCol = (MKPOL ~ UKPOL ~ T:2:((r0 - 2)) ~ Column):<1.5,hCol>;\n",
-    "DEF The22Columns = Radial22Obj:InternalCol;\n"
+    "DEF The22Columns = Radial22Obj:InternalCol;```\n"
    ]
   },
   {
@@ -1455,6 +1469,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "%-------------------------------------------------------------%\n",
     "%---Travi muro interno----------------------------------------%\n",
     "%-------------------------------------------------------------%\n",
@@ -1469,7 +1484,7 @@
     "STRUCT:<basement, T:3:hbasament, FullExtWall, FullTetto, CrossCourtWall,\n",
     "        CrossWalls, MedWallArcs, TheMedColumns, FullTopCourtWall, \n",
     "        FullCourTetto, The22Columns, The22Beams >;\n",
-    "%"
+    "%```"
    ]
   },
   {
@@ -1552,6 +1567,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "%-------------------------------------------------------------%\n",
     "%---Muro interno superiore------------------------------------%\n",
     "%-------------------------------------------------------------%\n",
@@ -1569,7 +1585,7 @@
     "STRUCT:<basement, T:3:hbasament, FullExtWall, FullTetto, CrossCourtWall,\n",
     "        CrossWalls, MedWallArcs, TheMedColumns, FullTopCourtWall, \n",
     "        FullCourTetto, The22Columns, The22Beams, The22Hwall >;\n",
-    "%"
+    "%```"
    ]
   },
   {
@@ -1657,6 +1673,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "%-------------------------------------------------------------%\n",
     "%---Coronamento superiore muro interno -----------------------%\n",
     "%-------------------------------------------------------------%\n",
@@ -1684,7 +1701,7 @@
     "STRUCT:<basement, T:3:hbasament, FullExtWall, FullTetto, CrossCourtWall,\n",
     "        CrossWalls, MedWallArcs, TheMedColumns, FullTopCourtWall, \n",
     "        FullCourTetto, The22Columns, The22Beams, The22Hwall, The11Frieze >;\n",
-    "%"
+    "%```"
    ]
   },
   {
@@ -1788,6 +1805,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "%-------------------------------------------------------------%\n",
     "%---Traliccio Tetto interno-----------------------------------%\n",
     "%-------------------------------------------------------------%\n",
@@ -1809,7 +1827,7 @@
     "        CrossWalls, MedWallArcs, TheMedColumns, FullTopCourtWall, \n",
     "        FullCourTetto, The22Columns, The22Beams, The22Hwall, \n",
     "        The11Frieze, TopTrellis >;\n",
-    "%"
+    "%```"
    ]
   },
   {
@@ -1899,6 +1917,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```\n",
     "%-------------------------------------------------------------%\n",
     "%---Traliccio Tetto intermedio--------------------------------%\n",
     "%-------------------------------------------------------------%\n",
@@ -1921,7 +1940,7 @@
     "  <basement, T:3:hbasament, FullExtWall, FullTetto, CrossCourtWall,\n",
     "        CrossWalls, MedWallArcs, TheMedColumns, FullTopCourtWall, \n",
     "        FullCourTetto, The22Columns, The22Beams, The22Hwall, \n",
-    "The11Frieze, TopTrellis , DoubleMedTrellis >;"
+    "The11Frieze, TopTrellis , DoubleMedTrellis >;```"
    ]
   },
   {
