--- a/2017-12-18/Workshop_09.ipynb
+++ b/2017-12-18/Workshop_09.ipynb
@@ -332,8 +332,12 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![vetro.png](imm/vetro.png))</td>\n",
-    "    <td>![vetro.png](imm/vetro-2.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\\\"imm/vetro.png\\\" style=\\\"width: 400px; height: 300px\\\"></td>\n",
+    "            <td><img src=\\\"imm/imm/vetro-2.png\\\" style=\\\"width: 400px; height: 300px\\\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
