--- a/2017-12-18/Workshop_09.ipynb
+++ b/2017-12-18/Workshop_09.ipynb
@@ -41,10 +41,12 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![villa_pisani_frontale.jpg](imm/originale/villa_pisani_frontale.jpg)</td></tr>\n",
-    "    <tr><td>![villa_pisani_retro.jpg](imm/originale/villa_pisani_retro.jpg)</td></tr>\n",
-    "    <tr><td>![villa_pisani_laterale.jpg](imm/originale/villa_pisani_laterale.jpg)</td></tr>\n",
-    "    <tr><td>![villa_pisani_2.jpg](imm/originale/villa_pisani_2.jpg)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr><img src=\"imm/originale/villa_pisani_frontale.jpg\"></tr>\n",
+    "        <tr><img src=\"imm/originale/villa_pisani_retro.jpg\"></tr>\n",
+    "        <tr><img src=\"imm/originale/villa_pisani_laterale.jpg\"></tr>\n",
+    "        <tr><img src=\"imm/originale/villa_pisani_2.jpg\"></tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -334,8 +336,8 @@
     "<table>\n",
     "    <tbody>\n",
     "        <tr>\n",
-    "            <td><img src=\\\"imm/vetro.png\\\" style=\\\"width: 400px; height: 300px\\\"></td>\n",
-    "            <td><img src=\\\"imm/imm/vetro-2.png\\\" style=\\\"width: 400px; height: 300px\\\"></td>\n",
+    "            <td><img src=\"imm/vetro.png\"></td>\n",
+    "            <td><img src=\"imm/vetro-2.png\"></td>\n",
     "        </tr>\n",
     "    </tbody>\n",
     "</table>"
@@ -455,9 +457,12 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![finestrella.png](imm/finestrella.png)</td>\n",
-    "    <td>![finestrella.png](imm/finestrella-2.png)</td></tr>\n",
-    "   \n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/finestrella.png\"></td>\n",
+    "            <td><img src=\"imm/finestrella-2.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -555,8 +560,12 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![finestraP1.png](imm/finestraP11.png)</td>\n",
-    "    <td>![finestraP1.png](imm/finestraP1-2.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/finestraP11.png\"></td>\n",
+    "            <td><img src=\"imm/finestraP1-2.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -632,8 +641,12 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![porta.png](imm/porta.png)</td>\n",
-    "    <td>![porta.png](imm/porta-2.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/porta.png\"></td>\n",
+    "            <td><img src=\"imm/porta-2.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -719,8 +732,12 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![finestraP2.png](imm/finestraP21.png)</td>\n",
-    "    <td>![finestraP2.png](imm/finestraP21-2.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/finestraP21.png\"></td>\n",
+    "            <td><img src=\"imm/finestraP21-2.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -790,8 +807,12 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![finestra_arco.png](imm/finestra_arco.png)</td>\n",
-    "    <td>![finestra_arco.png](imm/finestra_arco-2.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/finestra_arco.png\"></td>\n",
+    "            <td><img src=\"imm/finestra_arco-2.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -846,8 +867,12 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![angolari.png](imm/angolari.png)</td>\n",
-    "    <td>![angolari.png](imm/angolari-2.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/angolari.png\"></td>\n",
+    "            <td><img src=\"imm/angolari-2.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -951,10 +976,16 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![P0.png](imm/P0-3.png)</td>\n",
-    "    <td>![P0.png](imm/P0-4.png)</td></tr>\n",
-    "    <tr><td>![P0.png](imm/P0.png)</td>\n",
-    "    <td>![P0.png](imm/P0-2.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/P0-3.png\"></td>\n",
+    "            <td><img src=\"imm/P0-4.png\"></td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/P0.png\"></td>\n",
+    "            <td><img src=\"imm/P0-2.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -1056,10 +1087,16 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![P1.png](imm/P1a.png)</td>\n",
-    "    <td>![P1.png](imm/P1-2a.png)</td></tr>\n",
-    "    <tr><td>![P1.png](imm/P1-3a.png)</td>\n",
-    "    <td>![P1.png](imm/P1-4a.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/P1a.png\"></td>\n",
+    "            <td><img src=\"imm/P1-2a.png\"></td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/P1-3a.png\"></td>\n",
+    "            <td><img src=\"imm/P1-4a.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -1176,10 +1213,16 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![P2.png](imm/P2.png)</td>\n",
-    "    <td>![P2.png](imm/P2-2.png)</td></tr>\n",
-    "    <tr><td>![P2.png](imm/P2-3a.png)</td>\n",
-    "    <td>![P2.png](imm/P2-4a.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/P2.png\"></td>\n",
+    "            <td><img src=\"imm/P2-2.png\"></td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/P2-3a.png\"></td>\n",
+    "            <td><img src=\"imm/P2-4a.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -1252,8 +1295,12 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![angolari.png](imm/scalinata.png)</td>\n",
-    "    <td>![angolari.png](imm/scalinata-2.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/scalinata.png\"></td>\n",
+    "            <td><img src=\"imm/scalinata-2.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -1354,8 +1401,12 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![angolari.png](imm/scalinata_posteriore.png)</td>\n",
-    "    <td>![angolari.png](imm/scalinata_posteriore-2.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/scalinata_posteriore.png\"></td>\n",
+    "            <td><img src=\"imm/scalinata_posteriore-2.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -1451,8 +1502,12 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![colonne.png](imm/colonne_mattoni.png)</td>\n",
-    "    <td>![colonne.png](imm/colonne_mattoni-2.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/colonne_mattoni.png\"></td>\n",
+    "            <td><img src=\"imm/colonne_mattoni-2.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -1509,8 +1564,12 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![colonnato.png](imm/colonnato.png)</td>\n",
-    "    <td>![colonnato.png](imm/colonnato-2.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/colonnato.png\"></td>\n",
+    "            <td><img src=\"imm/colonnato-2.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -1601,8 +1660,12 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![archi.png](imm/archi.png)</td>\n",
-    "    <td>![archi.png](imm/archi-2.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/archi.png\"></td>\n",
+    "            <td><img src=\"imm/archi-2.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -1681,8 +1744,12 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![fregio.png](imm/fregio.png)</td>\n",
-    "    <td>![fregio.png](imm/fregio-2.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/fregio.png\"></td>\n",
+    "            <td><img src=\"imm/fregio-2.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -1757,8 +1824,12 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![frontone.png](imm/frontone.png)</td>\n",
-    "    <td>![frontone.png](imm/frontone-2.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/frontone.png\"></td>\n",
+    "            <td><img src=\"imm/frontone-2.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -1817,8 +1888,12 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![facciata.png](imm/facciata.png)</td>\n",
-    "    <td>![facciata.png](imm/facciata-2.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/facciata.png\"></td>\n",
+    "            <td><img src=\"imm/facciata-2.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -1851,10 +1926,16 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![facciata_completa.png](imm/facciata_completa.png)</td>\n",
-    "    <td>![facciata_completa.png](imm/facciata_completa-2.png)</td></tr>\n",
-    "    <tr><td>![facciata_completa.png](imm/facciata_completa-3.png)</td>\n",
-    "    <td>![facciata_completa.png](imm/facciata_completa-4.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/facciata_completa.png\"></td>\n",
+    "            <td><img src=\"imm/facciata_completa-2.png\"></td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/facciata_completa-3.png\"></td>\n",
+    "            <td><img src=\"imm/facciata_completa-4.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -1977,9 +2058,13 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![tetto.png](imm/tetto.png)</td>\n",
-    "    <td>![tetto.png](imm/tetto-2.png)</td>\n",
-    "    <td>![tetto.png](imm/tetto-3.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/tetto.png\"></td>\n",
+    "            <td><img src=\"imm/tetto-2.png\"></td>\n",
+    "            <td><img src=\"imm/tetto-3.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -2053,8 +2138,12 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![tetto_completo.png](imm/tetto_completo.png)</td>\n",
-    "    <td>![tetto_completo.png](imm/tetto_completo-2.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/tetto_completo.png\"></td>\n",
+    "            <td><img src=\"imm/tetto_completo-2.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -2088,10 +2177,16 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![villa_con_tetto.png](imm/villa_con_tetto.png)</td>\n",
-    "    <td>![villa_con_tetto.png](imm/villa_con_tetto-2.png)</td></tr>\n",
-    "    <tr><td>![villa_con_tetto.png](imm/villa_con_tetto-3.png)</td>\n",
-    "    <td>![villa_con_tetto.png](imm/villa_con_tetto-4.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/villa_con_tetto.png\"></td>\n",
+    "            <td><img src=\"imm/villa_con_tetto-2.png\"></td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/villa_con_tetto-3.png\"></td>\n",
+    "            <td><img src=\"imm/villa_con_tetto-4.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -2195,8 +2290,12 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![interni.png](imm/interni.png)</td>\n",
-    "    <td>![interni.png](imm/interni-2.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/interni.png\"></td>\n",
+    "            <td><img src=\"imm/interni-2.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -2226,8 +2325,12 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![interni2.png](imm/interni2.png)</td>\n",
-    "    <td>![interni2.png](imm/interni2-2.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/interni2.png\"></td>\n",
+    "            <td><img src=\"imm/interni2-2.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -2262,12 +2365,20 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![interni3.png](imm/interni3.png)</td>\n",
-    "    <td>![interni3.png](imm/interni3-2.png)</td></tr>\n",
-    "    <tr><td>![interni3.png](imm/interni3-3.png)</td>\n",
-    "    <td>![interni3.png](imm/interni3-4.png)</td></tr>\n",
-    "    <tr><td>![interni3.png](imm/interni3-5.png)</td>\n",
-    "    <td>![interni3.png](imm/interni3-6.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/interni3.png\"></td>\n",
+    "            <td><img src=\"imm/interni3-2.png\"></td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/interni3-3.png\"></td>\n",
+    "            <td><img src=\"imm/interni3-4.png\"></td>\n",
+    "        </tr>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/interni3-5.png\"></td>\n",
+    "            <td><img src=\"imm/interni3-6.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
   },
@@ -2349,8 +2460,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<tr><td>![albero.png](imm/albero.png)</td>\n",
-    "    <td>![albero.png](imm/albero-2.png)</td></tr>"
+    "<table>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/albero.png\"></td>\n",
+    "            <td><img src=\"imm/albero-2.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
+    "</table>"
    ]
   },
   {
@@ -2377,8 +2494,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<tr><td>![foresta.png](imm/foresta.png)</td>\n",
-    "    <td>![foresta.png](imm/foresta-2.png)</td></tr>"
+    "<table>\n",
+    "    <tbody>\n",
+    "        <tr>\n",
+    "            <td><img src=\"imm/foresta.png\"></td>\n",
+    "            <td><img src=\"imm/foresta-2.png\"></td>\n",
+    "        </tr>\n",
+    "    </tbody>\n",
+    "</table>"
    ]
   },
   {
@@ -2421,19 +2544,14 @@
    "metadata": {},
    "source": [
     "<table>\n",
-    "    <tr><td>![villa.png](imm/villa-a.png)</td></tr>\n",
-    "    <tr><td>![villa.png](imm/villa-2-a.png)</td></tr>\n",
-    "    <tr><td>![villa.png](imm/villa-3.png)</td></tr>\n",
-    "    <tr><td>![villa.png](imm/villa-4.png)</td></tr>\n",
+    "    <tbody>\n",
+    "        <tr><img src=\"imm/villa-a.png\"></tr>\n",
+    "        <tr><img src=\"imm/villa-2-a.png\"></tr>\n",
+    "        <tr><img src=\"imm/villa-3.png\"></tr>\n",
+    "        <tr><img src=\"imm/villa-4.png\"></tr>\n",
+    "    </tbody>\n",
     "</table>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
